--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/IMG_6786.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.png)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -106,7 +106,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/IMG_6785.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/testimonial-3.png" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
