--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Debobrato Biswas</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
-          <button class="btn"  href="assets/CV/DEBOBRATO-CompliteCV.pdf" download><i class="material-icons">file_download</i>Download Resume</button>
+          <!-- <button class="btn"  href="assets/CV/DEBOBRATO-CompliteCV.pdf" download><i class="material-icons">file_download</i>Download Resume</button> -->
 
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="assets/CV/DEBOBRATO-CompliteCV.pdf" download role="button">
           <i class="material-icons">file_download</i>Download Resume</a></p>
