--- a/index.html
+++ b/index.html
@@ -698,27 +698,35 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Debobrato Biswas</h4>
+              <p><em>Innovative and deadline-driven Full Stack Developer with 3+ years of experience developing web application and desktop application using java Spring Boot with Angular and JavaFX. I have experience on the video editing and PPT.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>02 Janata Housing Road, Dhaka</li>
+                <li>(+88) 01884-347441</li>
+                <li>devbiswas1499@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor of Computer Science &amp; Engineering</h4>
+              <h5>2015 - 2018</h5>
+              <p><em>National University,Bangladesh</em></p>
+              <p>CGPA: 2.85</p>
+            </div>
+           <div class="resume-item">
+              <h4>Higher Secondary Certificate ( HSC )</h4>
+              <h5>2011 - 2012</h5>
+              <p><em>Board: Board of Intermediate and Secondary Education,Jessore,Bangladesh</em>
+              <p><em>Collage: BAF Shaheen Collage,Jessore,Bangladesh</em></p>
+              <p>CGPA: 3.20</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Secondary School Certificate ( SSC )</h4>
+              <h5>2009 - 2010</h5>
+              <p><em>Board: Board of Intermediate and Secondary Education,Jessore,Bangladesh</em>
+              <p><em>Board: Board of Intermediate and Secondary Education,Jessore,Bangladesh</em></p>
+              <p>CGPA: 4.25</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
