--- a/index.html
+++ b/index.html
@@ -118,17 +118,21 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-					 <span>JAVA</span> <span class="pull-right">90%</span>
+					           <span>JAVA</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-					 <span>Spring Boot</span> <span class="pull-right">85%</span>
+					           <span>Spring Boot</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-					 <span>Angular 9</span> <span class="pull-right">85%</span>
+					           <span>Angular 9</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>JAVAFX</span> <span class="pull-right">90%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>HTML</span> <span class="pull-right">90%</span>
                     <div class="progress">
@@ -157,20 +161,19 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                     Hi! 👋 I'm Debobrato Biswas. And I make awesome things for awesome people!
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                      I loves programming, writing, speaking, traveling, and lifting heavy things.I does not love talking about himself in the 3rd person.
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      I'm a Full Stack Developer located in Bangladesh.I have serious passion for Spring Boot and Angular9 for creating intuitive,Responsive and Dynamic web application.
+                    </p>
+                    <p class="lead">
+                      Well-organised person, problem solver,independent employee with high attention to details.
+                    </p>
+                    <p class="lead">
+                      Interested in the entire full stack spectrum and working on ambitious project with positive people.
                     </p>
                   </div>
                 </div>
@@ -234,7 +237,7 @@
                 <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Photography</h2>
+                <h2 class="s-title">Video Editing</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -264,7 +267,7 @@
                 <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
+                <h2 class="s-title">Database Design</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -725,34 +728,52 @@
               <h4>Secondary School Certificate ( SSC )</h4>
               <h5>2009 - 2010</h5>
               <p><em>Board: Board of Intermediate and Secondary Education,Jessore,Bangladesh</em>
-              <p><em>Board: Board of Intermediate and Secondary Education,Jessore,Bangladesh</em></p>
+              <p><em>School: Gaid Ghat High School, Bagherpara , Jessore Board.</em></p>
               <p>CGPA: 4.25</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Junior Full Stack Developer</h4>
+              <h5>August 29, 2021 - Present</h5>
+              <p><em>IBCS-Primax,Mohammadpur,Dhaka,Bangladesh </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Now ,I am working BOF ERP project with our team.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Junior JavaFX Developer</h4>
+              <h5>January 01, 2019 - March 01, 2021</h5>
+              <p><em>HRSOFTBD,Mohammadpur,Dhaka,Bangladesh</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Developed numerous marketing desktop application (Doctor-Prescription, E-Voting,Resturant-Bill, School Management,Pharmecy,Departmental Stor, and Library Management).</li>
+                <li>Managed up to 7 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate Software</li>
               </ul>
             </div>
+
+             <div class="resume-item">
+              <h4>Junior Web Developer</h4>
+              <h5>Jun 01, 2018 - December 01, 2019</h5>
+              <p><em>Jingolab,Fharmgate,Dhaka,Bangladesh</em></p>
+              <ul>
+                <li>Developed numerous marketing web application ( Online Ecommarce).</li>
+                <li>Managed up to 1 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate Software</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Support Engineer</h4>
+              <h5>January 1, 2018 - May 01, 2018</h5>
+              <p><em>21 Technology,Mirpur,Dhaka,Bangladesh</em></p>
+              <ul>
+                <li>Support own e-Commarce web site .</li>
+                <li>Managed up to 1 projects or tasks at a given time while under pressure</li>
+              </ul>
+            </div>
+
           </div>
           
         </div>
@@ -833,7 +854,7 @@
                       <ul>
                         <li><a href="https://www.facebook.com/dev.biswas.5855/"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                        <li><a href="https://twitter.com/devbiswas14991"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/debobrato-biswas-461634147/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
@@ -856,12 +877,6 @@
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
             <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
               Designed by <a href="#">Debobrato Biswas</a>
             </div>
           </div>
